add: transaction-list and transaction table. customer_id uuid
